minor changes for uploading to PyPI

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,10 @@
 include LICENSE.txt
 include README.rst
-include MANIFEST.in
-recursive-include Doc *.rst *.html *.ipynb
 
-recursive-include pyzos/zos_obj_override *.dll *h *c
+recursive-include Doc *.rst *.html *.ipynb
+recursive-include pyzos/zos_obj_override *.py
 recursive-include Examples/scripts *.py *.zbf *.png *.txt *.CFG
 recursive-include Examples/misc *.py 
 recursive-include Examples/jupyter_notebooks *.ipynb
-prune Test
 prune pyzos/__pycache__
 prune Examples/jupyter_notebooks/.ipynb_checkpoints
